// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Terminal matches snapshot with default props 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Terminal matches snapshot with children 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Terminal content here                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
